--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
     "hint": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
@@ -38,5 +39,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.10.2"
   }
 }
